# c-dijkstra-pathfinding

./: .gitignore  CMakeLists.txt  README.md
include/: dijkstra.h  graph.h
src/: dijkstra-svc.c  dijkstra.c  graph.c
